# resume

./: .gitignore  Cargo.toml  README.md  index.yaml  justfile  netlify.toml
src/: body.rs  common.rs  index.rs  item.rs  link.rs  main.rs  opt.rs  section.rs  style.rs  tidy.rs  url.rs
templates/: index.css  index.html
